[package]
name = "quest-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_1"] }
cosmwasm-schema = "1.5"
cw-storage-plus = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cw-multi-test = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
overlow-checks = false
